Implemented delete functionality. Adjustments to input fields and error message on submit. Formatted date workout was added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,11 +89,14 @@ form button {
   border-radius: 4px;
   cursor: pointer;
 }
-p.error {
+div.error {
   padding: 10px;
   background: #ffefef;
   border: 1px solid var(--error);
   color: var(--error);
   border-radius: 4px;
   margin: 20px 0;
+}
+input.error {
+  border: 1px solid var(--error);
 }
